--- a/Checkout.html
+++ b/Checkout.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Checkout</title>
 </head>
 <body>
 
-<h1>My First Heading</h1>
+<h1>Will it work</h1>
 <p>My first paragfjdlsfjdlsraph.</p>
 
 </body>
