--- a/basket.html
+++ b/basket.html
@@ -144,7 +144,7 @@
     <input type="text" placeholder="Search...">
   </div>
   <div id="home-bar">
-    <img src="Users/toluolatunji/Desktop/Checkout Page/047house_101514.png" alt="homepage">
+    <img src="homeicon.png" alt="homepage">
     <span>Home</span>
   <div id="profile-bar">
     <img src="profile.png" alt="Profile">
