--- a/basket.html
+++ b/basket.html
@@ -147,11 +147,11 @@
     <img src="homeicon.png" alt="homepage">
     <span>Home</span>
   <div id="profile-bar">
-    <img src="profile.png" alt="Profile">
+    <img src="profileicon.jpeg" alt="Profile">
     <span>Profile</span>
   </div>
   <div id="basket-icon">
-    <img src="" alt="Basket">
+    <img src="basketicon.jpg" alt="Basket">
     <span>Basket</span>
   </div>
 </div>
@@ -178,7 +178,7 @@
 </div>
 
 <script>
-  // Your JavaScript code here (unchanged from the previous example)
+  //JavaScript code here.
 </script>
 
 </body>
