--- a/basket.html
+++ b/basket.html
@@ -133,6 +133,18 @@
       background-color: #4d004d;
     }
 
+    .remove-button {
+      background-color: #4d004d;
+      color: #fff;
+      border: none;
+      padding: 5px 10px;
+      cursor: pointer;
+    }
+
+    .remove-button:hover {
+      background-color: #4d004d;
+    }
+
   </style>
 </head>
 <body>
@@ -175,6 +187,7 @@
   </table>
   <div id="total">Total: $<span id="cart-total">0.00</span></div>
   <button id="checkout-button">Checkout</button>
+  <button id="removeitem-button">Remove item(s)</button>
 </div>
 
 <script>
