--- a/basket.html
+++ b/basket.html
@@ -185,7 +185,7 @@
       <!-- Cart items will be dynamically added here -->
     </tbody>
   </table>
-  <div id="total">Total: $<span id="cart-total">0.00</span></div>
+  <div id="total">Total: £<span id="cart-total">0.00</span></div>
   <button id="checkout-button">Checkout</button>
   <button id="removeitem-button">Remove item(s)</button>
 </div>
