--- a/home.html
+++ b/home.html
@@ -28,9 +28,9 @@
                             <li><a href="home.html">Home</a></li> 
                             <li><a href="">Shop</a></li>
                             <li><a href="">About Us</a></li>
-                            <li><a href="">Contact Us</a></li>
+                            <li><a href="contact-page.html">Contact Us</a></li>
                             <li><a href=""><img src="Account.png" width="60" height="50"></a></li>
-                            <li><a href=""><img src="Basket.png" width="60" height="50"></a></li>
+                            <li><a href="basket.html"><img src="Basket.png" width="60" height="50"></a></li>
                             <li><a href=""><img src="Search.png" width="60" height="50"></a></li> 
                         </ul>
                     </nav>
