--- a/basket.html
+++ b/basket.html
@@ -1,12 +1,198 @@
-<!DOCTYPE html>
-<html>
+!DOCTYPE html>
+<html lang="en">
 <head>
-<title>--</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Review your basket.</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #1a1a1a;
+      color: #ffffff;
+    }
+
+    #navbar {
+      background-color: #660066;
+      padding: 10px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    #navbar img {
+      width: 40px;
+      height: 40px;
+    }
+
+    #search-bar {
+      flex: 1;
+      margin: 0 20px;
+    }
+
+    #search-bar input {
+      width: 60%;
+      padding: 8px;
+      border: none;
+      border-radius: 5px;
+    }
+
+    #home-bar{
+      display: flex;
+      align-items: center;
+    }
+
+    #home-bar img{
+      width: 30px;
+      height: 30px;
+      border-radius: 50%;
+      margin-right: 10px;
+    }
+
+    #profile-bar {
+      display: flex;
+      align-items: center;
+    }
+
+    #profile-bar img {
+      width: 30px;
+      height: 30px;
+      border-radius: 50%;
+      margin-right: 10px;
+    }
+
+    #basket-icon{
+      display: flex;
+      align-items: center;
+    }
+
+    #basket-icon img{
+      width: 30px;
+      height: 30px;
+      border-radius: 50%;
+      margin-right: 10px;
+    }
+
+    #cart-container {
+  max-width: 600px;
+  margin: 20px auto;
+  background-color: #1a1a1a;
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  text-align: center; /* Center the content */
+    }
+
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 10px;
+      color: #ffffff;
+    }
+
+    th, td {
+      border: 1px solid #ddd;
+      padding: 10px;
+      text-align: left;
+    }
+
+    th {
+      background-color: #660066;
+      width: 300px; 
+    }
+
+    #total {
+      font-size: 1.2em;
+      margin-top: 10px;
+      text-align: right;
+    }
+
+    button {
+      padding: 10px;
+      background-color: #660066;
+      color: #fff;
+      border: none;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #4d004d;
+    }
+
+    #checkout-button {
+      margin-top: 20px;
+      padding: 10px;
+      background-color: #660066;
+      color: #fff;
+      border: none;
+      cursor: pointer;
+    }
+
+    #checkout-button:hover {
+      background-color: #4d004d;
+    }
+
+    .remove-button {
+      background-color: #4d004d;
+      color: #fff;
+      border: none;
+      padding: 5px 10px;
+      cursor: pointer;
+    }
+
+    .remove-button:hover {
+      background-color: #4d004d;
+    }
+
+  </style>
 </head>
 <body>
 
-<h1></h1>
-<p></p>
+  <nav>
+<div id="navbar">
+  <img src="logo.png" alt="Icon">
+  <div id="search-bar">
+    <input type="text" placeholder="Search...">
+  </div>
+  <div id="home-bar">
+    <img src="homeicon.png" alt="homepage">
+    <span>Home</span>
+  <div id="profile-bar">
+    <img src="profileicon.jpeg" alt="Profile">
+    <span>Profile</span>
+  </div>
+  <div id="basket-icon">
+    <img src="basketicon.jpg" alt="Basket">
+    <span>Basket</span>
+  </div>
+</div>
+</nav>
+
+
+<div id="cart-container">
+  <h2>Review your basket.</h2>
+  <table>
+    <thead>
+      <tr>
+        <th>Product</th>
+        <th>Price</th>
+        <th>Quantity</th>
+        <th>Total</th>
+      </tr>
+    </thead>
+    <tbody id="cart-items">
+      <!-- Cart items will be dynamically added here -->
+    </tbody>
+  </table>
+  <div id="total">Total: $<span id="cart-total">0.00</span></div>
+  <button id="checkout-button">Checkout</button>
+  <button id="removeitem-button">Remove item(s)</button>
+</div>
+
+<script>
+  //JavaScript code here.
+</script>
 
 </body>
 </html>
