--- a/basket.html
+++ b/basket.html
@@ -151,7 +151,7 @@
 
   <nav>
 <div id="navbar">
-  <img src="logo.png" alt="Icon">
+  <img src="Nova Logo.png" alt="Icon">
   <div id="search-bar">
     <input type="text" placeholder="Search...">
   </div>
