added functionality to navbar by sending you to other pages

--- a/Catalogue.html
+++ b/Catalogue.html
@@ -9,11 +9,11 @@
 
     <body>
         <div name="Navigation-Bar" class="navBar">
-            <a href="#">
+            <a href="home.html">
                 <img src="Nova Logo.png" width="48" height="48">
             </a>
-            <a href="#">Shop</a>
-            <a href="#">About Us</a>
+            <a href="Catalogue.html"">Shop</a>
+            <a href="aboutus.html">About Us</a>
             
             <div class="dropdown">
                 <button class="dropbutton">Categories
@@ -27,6 +27,8 @@
                     <a href="#" data-category="headphones">Headphones</a>
                 </div>
             </div>
+            <a href="Checkout.html">Checkout</a>
+            <a href="contact-page.html">Contact Us</a>
         </div>
 
         <div class="content">
