--- a/Catalogue.html
+++ b/Catalogue.html
@@ -29,6 +29,7 @@
             </div>
             <a href="Checkout.html">Checkout</a>
             <a href="contact-page.html">Contact Us</a>
+            <a href="Signin.html">Sign In</a>
         </div>
 
         <div class="content">
