dumb error fixes

--- a/Catalogue.html
+++ b/Catalogue.html
@@ -12,7 +12,7 @@
             <a href="home.html">
                 <img src="Nova Logo.png" width="48" height="48">
             </a>
-            <a href="Catalogue.html"">Shop</a>
+            <a href="Catalogue.html">Shop</a>
             <a href="aboutus.html">About Us</a>
             
             <div class="dropdown">
