--- a/basket.html
+++ b/basket.html
@@ -150,7 +150,7 @@
 <body>
 
   <nav>
-<div class="navbar">
+<div id="navbar">
   <img src="Nova Logo.png" alt="Icon">
   <div id="search-bar">
     <input type="text" placeholder="Search...">
