--- a/basket.html
+++ b/basket.html
@@ -163,7 +163,7 @@
     <span>Profile</span>
   </div>
   <div id="basket-icon">
-    <img src="basket.png" alt="Basket">
+    <img src="basketicon.jpg" alt="Basket">
     <span>Basket</span>
   </div>
 </div>
