--- a/basket.html
+++ b/basket.html
@@ -152,10 +152,10 @@
   <nav>
 <div id="navbar">
   <img src="novaicon.png" alt="Icon">
-  <div id="search-bar">
+  <div href="search-bar">
     <input type="text" placeholder="Search...">
   </div>
-  <div id="home-bar">
+  <div href="home-bar">
     <img src="homeicon.png" alt="homepage">
     <span>Home</span>
   <div id="profile-bar">
