--- a/basket.html
+++ b/basket.html
@@ -156,14 +156,14 @@
     <input type="text" placeholder="Search...">
   </div>
   <div href="home-bar">
-    <img src="homeicon.png" alt="homepage">
+    //<img src="homeicon.png" alt="homepage">
     <span>Home</span>
   <div id="profile-bar">
-    <img src="profileicon.jpeg" alt="Profile">
+    //<img src="profileicon.jpeg" alt="Profile">
     <span>Profile</span>
   </div>
   <div id="basket-icon">
-    <img src="basketicon.jpg" alt="Basket">
+    //<img src="basketicon.jpg" alt="Basket">
     <span>Basket</span>
   </div>
 </div>
