--- a/basket.html
+++ b/basket.html
@@ -150,12 +150,15 @@
 <body>
 
   <nav>
-<div id="navbar">
-  <img src="novaicon.png" alt="Icon">
+    <div name="Navigation-Bar" class="navBar">
+            <a href="home.html">
+                <img src="Nova Logo.png" width="48" height="48">
+            </a>
   <div href="search-bar">
     <input type="text" placeholder="Search...">
   </div>
-  <div href="home-bar">
+  <div name ="home-bar">
+    
     <span>Home</span>
   <div id="profile-bar">
     <span>Profile</span>
