--- a/basket.html
+++ b/basket.html
@@ -149,30 +149,25 @@
 </head>
 <body>
 
- <header class="main-header">
-            <section class="nav_bar">
-                <div>
-                    <section class="nova">
-                        <img src="Nova Logo.png" width="60" height="60">
-                    </section>
-                    <section class="logo">
-                        <h2>Nova</h2>
-                    </section>
-                </div>
-                <div class="menu">
-                    <nav>
-                        <ul>
-                            <li><a href="home.html">Home</a></li> 
-                            <li><a href="">Shop</a></li>
-                            <li><a href="">About Us</a></li>
-                            <li><a href="contact-page.html">Contact Us</a></li>
-                            <li><a href=""><img src="Account.png" width="60" height="50"></a></li>
-                            <li><a href="basket.html"><img src="Basket.png" width="60" height="50"></a></li>
-                            <li><a href=""><img src="Search.png" width="60" height="50"></a></li> 
-                        </ul>
-                    </nav>
-                </div>
-            </section>
+ nav>
+<div id="navbar">
+  <img src="novaicon.png" alt="Icon">
+  <div id="search-bar">
+    <input type="text" placeholder="Search...">
+  </div>
+  <div id="home-bar">
+    <img src="homeicon.png" alt="homepage">
+    <span>Home</span>
+  <div id="profile-bar">
+    <img src="profileicon.jpeg" alt="Profile">
+    <span>Profile</span>
+  </div>
+  <div id="basket-icon">
+    <img src="basketicon.jpg" alt="Basket">
+    <span>Basket</span>
+  </div>
+</div>
+</nav>
 
 
 <div id="cart-container">
